bad/assign_binop_cne_array.example_compiler_output
ERROR
[1mbad/assign_binop_cne_array.lat:8:9: [1;31merror: [0;1mleft side is not assignable[m
	x != y = new int[3];
	       [1;32m^[m
[1mbad/assign_binop_cne_array.lat:8:2: [1;34mnote: [0;1mleft side starts here[m
	x != y = new int[3];
	[1;32m^[m
